@@ -1,7 +1,13 @@
 =encoding UTF-8
 
+=head1 NAME
+
+AUTHORS - Authors of and contributors to PostScript-Barcode
+
 =over
 
 =item Lars Dɪᴇᴄᴋᴏᴡ C<< <daxim@cpan.org> >>
+
+=item Jozef Kutej C<< <jozef@kutej.net> >>
 
 =back
