@@ -11,7 +11,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.35
   perl: 5.010
-generated_by: 'Module::Build version 0.3513'
+generated_by: 'Module::Build version 0.3601'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,21 +20,22 @@ name: PostScript-Barcode
 provides:
   PostScript::Barcode:
     file: lib/PostScript/Barcode.pm
-    version: 0.002
+    version: 0.003
   PostScript::Barcode::Types:
     file: lib/PostScript/Barcode/Types.pm
-    version: 0.002
+    version: 0.003
   PostScript::Barcode::azteccode:
     file: lib/PostScript/Barcode/azteccode.pm
-    version: 0.002
+    version: 0.003
   PostScript::Barcode::datamatrix:
     file: lib/PostScript/Barcode/datamatrix.pm
-    version: 0.002
+    version: 0.003
   PostScript::Barcode::qrcode:
     file: lib/PostScript/Barcode/qrcode.pm
-    version: 0.002
+    version: 0.003
 requires:
   Alien::BWIPP: 0.001
+  Devel::Refcount: 0.06
   GSAPI: 0.5
   Moose: 0.93
   perl: 5.010
@@ -42,4 +43,4 @@ resources:
   bugtracker: http://github.com/daxim/PostScript-Barcode/issues
   license: http://dev.perl.org/licenses/
   repository: http://github.com/daxim/PostScript-Barcode
-version: 0.002
+version: 0.003
