@@ -1,6 +1,11 @@
 =encoding UTF-8
 
-PostScript-Barcode version 0.002 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
+PostScript-Barcode version 0.003 is Copyright © 2009, Lars Dɪᴇᴄᴋᴏᴡ
+
+=head1 NAME
+
+README - basic information for users prior to downloading
+
 
 =head1 INSTALLATION
 
