@@ -14,25 +14,27 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 eeea3455c8ae0efecc06246aeb0958b4777053b9 AUTHORS
-SHA1 4a46ac4c82a9ee14410983d5500b6d1e2ad20505 Build.PL
-SHA1 19a366ce307e337d5fe44ae1405c5a39de0ca84f Changes
-SHA1 c93bd18a41542871ced682fe3be87f4cda69bd11 MANIFEST
+SHA1 ab9536f319e96044fbc6dc4762ca9e78e8b5b2cb AUTHORS
+SHA1 369219f20612038346fec7b3fb2b4264d3cc0203 Build.PL
+SHA1 adc698beaebec972868deaaebe6adb3ca679f6da Changes
+SHA1 b9c0ffdd1c2c382debee60fe39fe015f485bf381 MANIFEST
 SHA1 6bec347e8c5b2f364c6a22b120efe7aa9a6143ae MANIFEST.SKIP
-SHA1 127dbdc382fe37fac5d281246191635ec52ad470 META.yml
-SHA1 818a0acbf5ec9e8bc93abf53fa55a137e2281e79 README
-SHA1 942120369216a635de813d708dc88b35edf2a04e lib/PostScript/Barcode.pm
-SHA1 57d585542c0a879ad341fda21d85d55447cea2b6 lib/PostScript/Barcode/Types.pm
-SHA1 dae78a254a8a0c3f400e8822e48342e014eb4c5a lib/PostScript/Barcode/azteccode.pm
-SHA1 a1d4a9267b0dbd22ce7f66e14b65e4705aaed115 lib/PostScript/Barcode/datamatrix.pm
-SHA1 f0c05e94bb64f02e1948c3f9828853a568f5bc0d lib/PostScript/Barcode/qrcode.pm
+SHA1 b6eaa19f44aba779f2df2d3d50926b7b8c820ace META.yml
+SHA1 56254b1832d9d5c6aba585fe6e80a42a8e8ad5e5 README
+SHA1 a2ba12e9efed07b46420e9be854635245b9438ae lib/PostScript/Barcode.pm
+SHA1 994a128217f4c6f6d99a653bfe9ed7ca76fdf099 lib/PostScript/Barcode/Types.pm
+SHA1 6b4b53c196d5250d4fe6c4171427e4c30d569149 lib/PostScript/Barcode/azteccode.pm
+SHA1 ef4c13e27a88b829d8e263819dcb85312e7143ed lib/PostScript/Barcode/datamatrix.pm
+SHA1 a7c108fc47b91409838685c18521b7f209387d71 lib/PostScript/Barcode/qrcode.pm
 SHA1 e256b5a09407cab2ebfc4bf42130cc30d48d22fa t/00-load.t
 SHA1 cbd24a07795c5f48d9426cd07f1a491672feb8ef t/10-exception.t
 SHA1 5b1efdb1cc39f071e84b5874ad85f45c1c151138 t/10-interface.t
+SHA1 ae77b9fbe2acbf6101bccdad8dcf818405a1c791 t/20-bug-empty-data-string.t
+SHA1 bd0d7806e2389f3a008d9555b1ccfb008dea4bbb t/20-bug-multiple-constructor.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.12 (GNU/Linux)
 
-iEYEARECAAYFAkshNQ4ACgkQFtlTdOX00Ho/agCfS+ShHhQbQod1aM1OT+VItjdL
-U/QAoJkb2GiLiz9VpYc3XvhjrY0CIbAd
-=3mK3
+iEYEARECAAYFAktPJoMACgkQFtlTdOX00HpLQQCeJKVDdwwaeA5ugTi6RsJd2NWd
+0vQAnRhM6q5RYgS0OV/3fP7EIDfzXUvV
+=Nex7
 -----END PGP SIGNATURE-----
