@@ -5,7 +5,7 @@ use strict;
 use warnings FATAL => 'all';
 use Moose::Util::TypeConstraints qw(enum subtype as);
 
-our $VERSION = '0.002';
+our $VERSION = '0.003';
 
 enum 'PostScript::Barcode::Types::Enum::azteccode::format'    => qw(full compact rune);
 enum 'PostScript::Barcode::Types::Enum::datamatrix::encoding' => qw(byte ascii edifact c40 text x12);
@@ -28,7 +28,7 @@ PostScript::Barcode::Types - extended type constraints
 
 =head1 VERSION
 
-This document describes C<PostScript::Barcode::Types> version C<0.002>.
+This document describes C<PostScript::Barcode::Types> version C<0.003>.
 
 
 =head1 SYNOPSIS
