@@ -8,7 +8,7 @@ use PostScript::Barcode::Types qw();
 
 with qw(PostScript::Barcode);
 
-our $VERSION = '0.002';
+our $VERSION = '0.003';
 
 has 'parse'    => (is => 'rw', isa => 'PostScript::Barcode::Types::Bool',);
 has 'encoding' => (is => 'rw', isa => 'PostScript::Barcode::Types::Enum::datamatrix::encoding',);
@@ -19,7 +19,7 @@ has 'raw'      => (is => 'rw', isa => 'PostScript::Barcode::Types::Bool',);
 sub BUILD {
     my ($self) = @_;
     my %metrics = (
-        1    => 15,
+        0    => 15,
         2    => 18,
         4    => 21,
         7    => 24,
@@ -46,7 +46,7 @@ sub BUILD {
     );
 
     unless ($self->bounding_box) {
-        my $size;
+        my $size = $metrics{0};
         my @order = sort {$a <=> $b} keys %metrics;
         for my $data_length (@order) {
             last if $data_length > length $self->data;
@@ -74,7 +74,7 @@ PostScript::Barcode::datamatrix - Data Matrix
 
 =head1 VERSION
 
-This document describes C<PostScript::Barcode::datamatrix> version C<0.002>.
+This document describes C<PostScript::Barcode::datamatrix> version C<0.003>.
 
 
 =head1 SYNOPSIS
